@startuml

title __EXAM_REG's Class Diagram__\n

  namespace com.example.exam_reg {
    class com.example.exam_reg.HomeActivity {
        - btnReturn : Button
        - existUsernameList : String[]
        - newUsername : EditText
        - toNewUsername : String
        - username : String
        + changeUsername()
        # onCreate()
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.MainActivity {
        {static} + accounts : HashMap<String, String>
        {static} + reqWithHome : int
        {static} + reqWithRegister : int
        - exit : Button
        - login : Button
        - password : EditText
        - register : Button
        - username : EditText
        # onActivityResult()
        # onCreate()
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.RegisterActivity {
        - btnRegister : Button
        - existUsernameList : String[]
        - intent : Intent
        - password : EditText
        - username : EditText
        + onClick()
        + register()
        # onCreate()
    }
  }
  

  namespace com.example.exam_reg {
    class com.example.exam_reg.WelcomeActivity {
        # onCreate()
    }
  }
  

  com.example.exam_reg.HomeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.RegisterActivity .up.|> android.view.View.OnClickListener
  com.example.exam_reg.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.exam_reg.WelcomeActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
